grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: default
spec:
  rules:
    - host: grafana.bermanoc.net
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: cluster-monitoring-grafana
                port:
                  number: 80
---
